--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
     "firebase": "^11.9.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
