--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "firebase": "^11.9.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-scroll-picker": "^0.1.15"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
