--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vue-scroll-picker": "^2.0.1"
+    "vue3-scroll-picker": "^0.1.15"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
