--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vue3-scroll-picker": "^0.1.15"
+    "vue-scroll-picker": "^2.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
+    "less": "^4.4.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
