--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
     "less": "^4.4.0",
+    "vercel": "^45.0.9",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
