--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "@capacitor/core": "^7.4.3",
+    "@capacitor/ios": "^7.4.3",
     "dayjs": "^1.11.13",
     "firebase": "^11.9.1",
     "pinia": "^3.0.1",
@@ -18,6 +20,7 @@
     "vue-scroll-picker": "^2.0.1"
   },
   "devDependencies": {
+    "@capacitor/cli": "^7.4.3",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
     "less": "^4.4.0",
