--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
+    "target": "ESNext",
+    "module": "ESNext",
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*.vue", "src/**/*.js"]
+  "include": ["src/**/*.js", "src/**/*.vue"]
 }
