--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/ios": "^7.4.3",
     "dayjs": "^1.11.13",
     "firebase": "^11.9.1",
+    "pinia": "^3.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-scroll-picker": "^2.0.1"
