--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,19 @@ coverage
 *.sw?
 
 *.tsbuildinfo
+
+
+# Capacitor build outputs
+ios/App/public/
+android/app/src/main/assets/public/
+
+# iOS
+ios/App/Pods/
+ios/App/Podfile.lock
+ios/App/build/
+*.xcworkspace/xcuserdata/
+
+# Android
+android/.gradle/
+android/app/build/
+android/local.properties
