--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -11,12 +11,15 @@ install! 'cocoapods', :disable_input_output_paths => true
 def capacitor_pods
   pod 'Capacitor', :path => '../../node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../../node_modules/@capacitor/ios'
-
 end
 
 target 'App' do
   capacitor_pods
-  # Add your Pods here
+
+  # ✅ Firebase SDK 전체 추가
+  pod 'FirebaseCore'
+  pod 'FirebaseAnalytics'   # 이벤트 추적용
+  pod 'FirebaseMessaging'   # 푸시 알림용
 end
 
 post_install do |installer|
