--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -49,5 +49,18 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>CFBundleGetInfoString</key>
+	<string></string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>heyruffy</string>
+			</array>
+			<key>CFBundleURLName</key>
+			<string>com.heyruf.heyruffy</string>
+		</dict>
+	</array>
 </dict>
 </plist>
