--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -23,10 +23,9 @@
   <key>LSRequiresIPhoneOS</key>
   <true/>
 
+  <!-- Launch screen 유지 -->
   <key>UILaunchStoryboardName</key>
   <string>LaunchScreen</string>
-  <key>UIMainStoryboardFile</key>
-  <string>Main</string>
 
   <key>UIRequiredDeviceCapabilities</key>
   <array>
@@ -50,7 +49,7 @@
   <key>UIViewControllerBasedStatusBarAppearance</key>
   <true/>
 
-  <!-- ✅ iOS 13+ 씬 생명주기 채택: SceneDelegate 사용 -->
+  <!-- ✅ iOS 13+ 씬 생명주기: SceneDelegate 사용 -->
   <key>UIApplicationSceneManifest</key>
   <dict>
     <key>UIApplicationSupportsMultipleScenes</key>
@@ -63,11 +62,7 @@
           <key>UISceneConfigurationName</key>
           <string>Default Configuration</string>
           <key>UISceneDelegateClassName</key>
-          <string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
-          <!-- 스토리보드(Main) 이미 위에서 지정되어 있으므로 보통 아래는 불필요
-          <key>UIStoryboardName</key>
-          <string>Main</string>
-          -->
+          <string>App.SceneDelegate</string>
         </dict>
       </array>
     </dict>
