--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@capacitor/app": "^7.1.0",
     "@capacitor/core": "^7.4.3",
     "@capacitor/ios": "^7.4.3",
+    "@capawesome-team/capacitor-datetime-picker": "^7.0.1",
     "dayjs": "^1.11.13",
     "firebase": "^11.9.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "vue-scroll-picker": "^2.0.1"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@capacitor/cli": "^7.4.3",
