--- a/ios/App/App/GoogleService-Info.plist
+++ b/ios/App/App/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.heyruffy.app.HeyRuffy</string>
+	<string>com.heyruffy.app.HeyRuffy.dev</string>
 	<key>PROJECT_ID</key>
 	<string>hey-ruffy</string>
 	<key>STORAGE_BUCKET</key>
